<resources>
    <string name="app_name" translatable="false">Rusal Food</string>
    <string name="app_caption" translatable="false">RUSAL</string>


    //SignIn\SignUp screens
    <string name="sign_up">Регистрация</string>
    <string name="privacy_policy_text">Нажимая “Далее”, вы принимаете \nусловия публичной оферты</string>
    <string name="sign_up_password_instruction">Пароль должен состоять минимум из \n9 символов</string>
    <string name="sign_up_email_instruction">Введите ваш почтовый адрес</string>
    <string name="email_hint" translatable="false">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="Next_button">Далее</string>
    <string name="sign_in_btn_txt">Войти</string>
    <string name="sign_up_btn_txt">Регистрация</string>
    <string name="continue_as_a_guest_btn_txt">Войти как Гость</string>
    <string name="login_screen_logo_caption" translatable="false">food service</string>

    // Main
    <string name="main_header">Заказ с собой</string>

    //Place Fragment
    <string name="images_counter" translatable="false">%1$d/%2$d</string>

    // Basket
    <string name="basket_basket">Корзина</string>
    <string name="basket_header">Мой заказ</string>
    <string name="basket_total">Итого</string>
    <string name="basket_pay_button">Оплатить</string>

    // Orders
    <string name="orders_header">Мои заказы</string>
    <string name="orders_status">Статус - </string>
    <string name="orders_date">Дата</string>
    <string name="orders_number">Номер заказа</string>

    <string name="orders_sign_in">Войдите в свой аккаунт</string>
    <string name="orders_sign_in_req">Необходимо войти в свой аккаунт, чтобы увидеть историю заказов</string>
    <string name="orders_sign_in_btn">Войти</string>

    // Order Details
    <string name="order_details_header">Детали заказа</string>
    <string name="order_details_positions">Позиции в заказе</string>
    <string name="order_details_status">Статус заказа</string>

    //Bottom Nav Bar
    <string name="bottom_nav_main">Главная</string>
    <string name="bottom_nav_orders_history">Мои заказы</string>
    <string name="bottom_nav_rakhmet">Рахмет</string>

    // Hints
    <string name="hints_name">Название</string>
    <string name="hints_address">Адрес</string>
    <string name="hints_category">Категория</string>
    <string name="hints_product">Продукт</string>
    <string name="hints_description">Описание</string>
    <string name="hints_price">Цена</string>
    <string name="hints_price_count">2 шт.</string>
    <string name="hints_status_done">Готов</string>
    <string name="hints_status_pending">В обработке</string>

    <string name="hints_sum_1" translatable="false">9 999</string>
    <string name="hints_sum_2" translatable="false">0</string>
    <string name="hints_gallery_counter" translatable="false">1/22</string>
    <string name="hints_date" translatable="false">15.12.2021, 10:44</string>
    <string name="hints_range">1.8 км.</string>

    //Order statuses
    <string name="in_progress_status">В обработке</string>
    <string name="in_kitchen_status">На кухне</string>
    <string name="order_ready_status">Готов</string>
    <string name="order_completed_status">Завершен</string>


</resources>