<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/detailsPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hints_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/detailsRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsPlace"
        android:hint="@string/hints_range"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detailsPlace"
        app:layout_constraintTop_toBottomOf="@+id/detailsPlace" />

    <TextView
        android:id="@+id/detailsAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsPlace"
        android:layout_toRightOf="@id/detailsRange"
        android:hint="@string/hints_address"
        android:textSize="14sp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/detailsRange"
        app:layout_constraintTop_toBottomOf="@+id/detailsPlace" />

    <View
        android:id="@+id/divider_2"
        style="@style/divider"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="#ECECEC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsAddress" />

    <TextView
        android:id="@+id/detailsStatusH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:paddingVertical="4dp"
        android:text="@string/order_details_status"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_2" />

    <TextView
        android:id="@+id/detailsStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsStatusH"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/hints_status_pending"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsStatusH" />

    <TextView
        android:id="@+id/detailsDateH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsStatus"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:paddingTop="8dp"
        android:text="@string/orders_date"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsStatus" />

    <TextView
        android:id="@+id/detailsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsDateH"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/hints_date"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsDateH" />

    <TextView
        android:id="@+id/detailsNumberH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsDate"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:paddingTop="8dp"
        android:text="@string/orders_number"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsDate" />

    <TextView
        android:id="@+id/detailsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsNumberH"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:hint="@string/hints_sum_1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsNumberH" />

    <View
        android:id="@+id/divider_3"
        style="@style/divider"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="#ECECEC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsNumber" />

    <TextView
        android:id="@+id/detailsPositionsH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:text="@string/order_details_positions"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detailsRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsPositionsH"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsPositionsH" />

    <View
        android:id="@+id/divvv"
        style="@style/divider"
        android:layout_marginTop="8dp"
        android:layout_below="@id/detailsRecycler"
        android:layout_marginHorizontal="16dp"
        android:background="#ECECEC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsRecycler" />

    <TextView
        android:id="@+id/detailsItogoH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:text="@string/basket_total"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divvv" />

    <TextView
        android:id="@+id/detailsItogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:gravity="end"
        android:hint="@string/hints_sum_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divvv" />


</androidx.constraintlayout.widget.ConstraintLayout>