<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8">

    <TextView
        android:id="@+id/basket_place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hints_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/basket_place_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hints_address"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/basket_place_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/basket_place_name"
        app:layout_constraintTop_toBottomOf="@+id/basket_place_name"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider_1"
        style="@style/divider2"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/basket_place_address" />

    <TextView
        android:id="@+id/text_view_my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/basket_header"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"


        app:layout_constraintStart_toStartOf="@+id/basket_place_name"
        app:layout_constraintTop_toBottomOf="@id/divider_1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basket_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_my_order" />


    <TextView
        android:id="@+id/text_view_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/basket_total"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pay_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/hints_sum_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pay_button"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/pay_button"
        style="@style/basic_btn_style"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:text="@string/basket_pay_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>