<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.login_fragment.SignUpPasswordFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sing_up_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up_password_instruction"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_txt_inp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/password_hint"
            android:orientation="vertical"
            app:boxBackgroundColor="#79E8E8E8"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_login_password_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_text"
            android:textAlignment="center"
            android:textSize="14dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:text="@string/Next_button"
            android:textAllCaps="false"
            android:textSize="@dimen/btns_text_size"
            android:textStyle="bold"
            app:backgroundTint="@color/mtrl_btn_red_bg_color_selector"
            app:cornerRadius="12dp" />

    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>