<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.sign_up_fragment.SignUpLoginFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            style="@style/font_bold" />

        <TextView
            android:id="@+id/sing_up_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up_email_instruction"
            android:textAlignment="center"
            android:textSize="18sp"
            style="@style/font_bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_txt_inp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            style="@style/input_field_text_input_layout_style"
            app:startIconDrawable="@android:drawable/sym_action_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_login_field"
                style="@style/email_input_field_text_input_edit_text_style" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_text"
            android:textAlignment="center"
            android:textSize="14sp"
            style="@style/font_bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:text="@string/Next_button"
            style="@style/basic_btn_style"
            app:backgroundTint="@color/btn_red_bg_color_selector" />

    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>