<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DADADA">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_in_requirement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_sign_in"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.337" />

        <TextView
            android:id="@+id/tv_requirement"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/orders_sign_in_req"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_sign_in"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/tv_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in"
            app:layout_constraintVertical_bias="0.041" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:backgroundTint="#2997FF"
            android:text="@string/orders_sign_in_btn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_requirement"
            app:layout_constraintStart_toStartOf="@+id/tv_requirement"
            app:layout_constraintTop_toBottomOf="@+id/tv_requirement"
            app:layout_constraintVertical_bias="0.084" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>