<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.sign_in_fragment.SignInFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_fragment_header"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="40dp"
        android:layout_weight="0.5"
        android:drawablePadding="2dp"
        android:text="@string/app_name"
        style="@style/font_bold"
        android:textSize="25sp"
        app:drawableStartCompat="@drawable/ic_ra"
        tools:background="@color/purple_200" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/input_field_text_input_layout_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:startIconDrawable="@android:drawable/sym_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_login_field"
            style="@style/email_input_field_text_input_edit_text_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/input_field_text_input_layout_style"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_password_field"
            style="@style/password_input_field_text_input_edit_text_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="40dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                app:backgroundTint="@color/mtrl_btn_blue_bg_color_selector"
                android:text="@string/sign_in_btn_txt"
                style="@style/basic_mtrl_btn_style" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sign_up_btn_txt"
                style="@style/basic_mtrl_btn_style"
                app:backgroundTint="@color/mtrl_btn_blue_bg_color_selector" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_guest_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:backgroundTint="@color/mtrl_btn_blue_bg_color_selector"
            android:text="@string/continue_as_a_guest_btn_txt"
            style="@style/basic_mtrl_btn_style" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
